--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
 		<script>document.write(returnCitySN["cname"])</script>  
 		© 
-		<a style="text-decoration:none;" href="https://api.xkx.me/">xKx.Me | </a>更多：<a style="text-decoration:none;" href="https://api.xkx.me/">短视频解析</a>
+		<a style="text-decoration:none;" href="https://www.xiaoheiworld.com/">幕后小黑 | </a>更多：<a style="text-decoration:none;" href="https://videos.xiaoheiworld.com/">小黑影视</a>
 		</p>
 		</div>
 		</div>
